Fixed tooltip not fitting on the screen, refactored the repo a little

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,3 +53,7 @@
     border: tall blue;
 }
 
+Tooltip{
+    max-width: 80%;
+}
+
